Fix font size consistency in body paragraphs on mobile

--- a/interior-design/components/styles/body.module.scss
+++ b/interior-design/components/styles/body.module.scss
@@ -146,6 +146,6 @@
   }
 
   .paragraph {
-    font-size: 0.6rem;
+    font-size: 0.65rem;
   }
 }
